[tool.poetry]
name = "nonebot-plugin-pmhelp"
version = "1.3.9"
description = "源于LittlePaimon的插件管理器插件，提供自动生成帮助图，并对群/私聊进行权限管理"
authors = ["CM-Edelweiss <2633668472@qq.com>"]
readme = "README.md"




[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.2.0"
fastapi =  ">=0.93.0"
nonebot-adapter-onebot = "^2.1"
nonebot-plugin-localstore = "^0.7.1"
nonebot-plugin-tortoise-orm = ">=0.1.1"
nonebot-plugin-apscheduler = "^0.5.0"
httpx = "^0.23.0"
ujson = "^5.4.0"
Pillow = "^9.1.0"
amis-python = "^1.0.6"
python-jose = "^3.3.0"
matplotlib = "^3.5.1"
tqdm = "^4.64.0"
tortoise-orm = "^0.19.2"
"ruamel.yaml" = "^0.17.21"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
